style.css
body {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  margin: 0;
}

#gridButton {
    margin-bottom: 25px;
}

#div-container {
    justify-content: center;
    display: grid;
    grid-template-columns: repeat(16, auto); 
    width: 400px;
    height: 400px;
    max-width: 90vw;
    max-height: 90vw;
    margin: 0 auto;
  }
  
  #div-container div {
    width: 20px;
    margin: -1px;
    height: 20px;
    border: 1px solid rgb(58, 57, 57);
    background-color: rgb(236, 236, 240);
  }

footer {
    text-align: center; 
    padding: 10px;
    position: relative;
    bottom: 0;
    width: 100%;
}

